Update display of the player's odds and updated how-it-works description

--- a/templates/how-it-works.html
+++ b/templates/how-it-works.html
@@ -7,7 +7,7 @@
     <h1>{{ _('How It Works') }}</h1>
     <p>{{ _('This is how points are awarded in DartsGuesser:') }}</p>
     <ul class="points-list">
-        <li><strong>{{ _('5 Points') }}</strong>: {{ _('For guessing the correct winner of any match.') }}</li>
+        <li><strong>{{ _('The odds of a player') }}</strong>: {{ _('For guessing the correct winner of any match you will be awarded the betting quote (from oddsportal.com) for this player.') }}</li>
         <li><strong>{{ _('20 Points') }}</strong>: {{ _('For predicting the correct World Champion.') }}</li>
         <li><strong>{{ _('10 Points') }}</strong>: {{ _('For correctly guessing the player with the most 180s.') }}</li>
         <li><strong>{{ _('Up to 40 Points') }}</strong>: {{ _('For guessing the number of thrown 180s throughout the tournament. For every 10 180s you are off, you will lose 5 points from the maximum of 40. No negative points are awarded.') }}</li>
