--- a/templates/group_page.html
+++ b/templates/group_page.html
@@ -45,7 +45,8 @@
         place: "{{ translate_place_title }}",
         username: "{{ translate_username_title }}",
         points: "{{ translate_points_title }}",
-        points_180: "{{ translate_points_180_calc }}"
+        points_180: "{{ translate_points_180_calc }}",
+        odds: "{{ translate_odds }}"
     };
     </script>
 
@@ -94,12 +95,12 @@
                     playerCell.rowSpan = 3;
                     const playerContent = document.createElement('div');
                     playerContent.textContent = game.player_1;
-                    playerContent.textContent += ` ( ${game.odds_player_1} )`;
+                    playerContent.textContent += ` (${translations.odds}:  ${game.odds_player_1})`;
                     const vsText = document.createElement('div');
                     vsText.textContent = 'vs.';
                     const player2Content = document.createElement('div');
                     player2Content.textContent = game.player_2;
-                    player2Content.textContent += ` ( ${game.odds_player_2} )`;
+                    player2Content.textContent += ` (${translations.odds}: ${game.odds_player_2})`;
 
                     // Highlight winner
                     if (game.winner === game.player_1) {
