Added Explanation when guesses close

--- a/templates/my-guesses.html
+++ b/templates/my-guesses.html
@@ -22,7 +22,9 @@
         <p style="color: red; font-weight: bold;">
             {{ _('Please make sure you save your guesses each time before you view another round (or the overall tournament guesses).') }}
         </p>
-
+        <p> 
+            {{ _('Overall Tournament Guesses will lock at 6 pm of the day of the first match. Match guesses will lock one hour before scheduled start of the match.') }}
+        </p>
         <!-- Save Button -->
         <button class="btn btn-success btn-lg mb-3" id="saveGuessesButton">{{ _('Save my guesses') }}</button>
 
