--- a/templates/base.html
+++ b/templates/base.html
@@ -10,15 +10,17 @@
     <style>
         /* Set the body background image and style*/
         body {
-            background-image: url('{{ url_for('static', filename='images/background.jpg') }}');
-            background-size: cover;
-            background-position: center;
-            background-attachment: fixed;
-            margin: 0;
-            padding: 0;
-            min-height: 100vh;  /* Ensure the body spans the entire viewport height */
-            color: #fff;  /* Optional: change text color for better contrast */
-        }
+                margin: 0;
+                padding: 0;
+                min-height: 100vh;
+                color: #fff;
+                background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), 
+                                  url('{{ url_for('static', filename='images/background.jpg') }}');
+                background-size: cover;
+                background-position: center;
+                background-attachment: fixed;
+                background-blend-mode: darken; /* Blend the dimming overlay with the image */
+            }
 
         /* Optional: Add a semi-transparent overlay to make text readable */
         .container {
