--- a/templates/my-guesses.html
+++ b/templates/my-guesses.html
@@ -72,8 +72,7 @@
                 // Get user's current time and convert to London time
                 const currentDate = new Date();
                 const userTimeZoneOffset = currentDate.getTimezoneOffset() * 60 * 1000; // Offset in ms
-                const londonTime = new Date(currentDate.getTime()- userTimeZoneOffset);
-
+                const londonTime = new Date(currentDate.getTime()+ userTimeZoneOffset);
                 games.forEach(game => {
                     const table = document.createElement('table');
                     table.classList.add('table', 'mt-3');
